[tool.poetry]
name = "are-you-okay"
version = "0.1.0"
description = ""
authors = ["Mohak Jain <mohakjain@berkeley.edu>"]
readme = "README.md"
packages = [{include = "are_you_okay"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
spotipy = "^2.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
